got pictures in and the content box made correctly

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -13,7 +13,9 @@ ASSIGNMENT: HTML template
     </head>
     <body>
 
-        <div id = "inside"> pass this on to your school radio station, television station, or public address system announcer</div>
+        <div id = "outside"> pass this on to your school radio station, television station, or public address system announcer
+            <div id = "picture"><img src="../images/pict.png"></div>
+        </div>
 
     </body>
 </html>
