--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <!--
+trebuchet
+georga
 AUTHOR: JB
 VERSION: 1.0
 CREATED: 1.24.2013
@@ -8,10 +10,22 @@ ASSIGNMENT: HTML template
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title> * * SET TITLE * * </title>
+		<title> 300 Movie review </title>
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
-		<div id = "footer">Selective Service System Arlington, VA</div>
+	<body>
+		<div id = "filler">
+			<h1 id = "title"> Movie Review: 300 </h1>
+			<h2 id = "author"> By Dudley Storey </h2>
+			<h3 id = "date">  March 12, 2007 </h3>
+			<div id = "tree"> <img src="images/tree.jpg"> </div>
+		</div>
+			<div id = "container">
+				The great, desperate, one-sided battles of history – the Alamo, Rorke’s Drift, Iwo Jima – are quickly drawn into myth. And it is through film, that most modern of myth-making mediums, that the oldest heroic battle of all, that of a handful of Spartans against the Persian army at Thermopylae, has been turned into 300, the movie that opened this weekend.
+
+			</div>
+		</div>
+
 	</body>
 </html>
 
