--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ ASSIGNMENT: HTML template
 			<h1 id = "title"> Movie Review: 300  </h1><br>
 			<h2 id = "author"> By Dudley Storey </h2><br>
 			<h3 id = "date">  March 12, 2007 </h3><br>
-			<div id = "tree"> <img src="images/tree.jpg"> </div>
-
 			<div id = "text">
+				<div id = "tree"> <img src="images/tree.jpg"> </div>
 				<p>
+
 				The great, desperate, one-sided battles of history – the Alamo, Rorke’s Drift, Iwo Jima –
 					are quickly drawn into myth. And it is through film, that most modern of myth-making
 					mediums, that the oldest heroic battle of all, that of a handful of Spartans
@@ -30,7 +30,7 @@ ASSIGNMENT: HTML template
 				</p>
 
 				<br>
-
+				<div id = "comparison"> <img src = "images/comparison.jpg"></div>
 				<p>
 					As in Roberto Rodriguez’s Sin City, director Zack Snyder has created a homage to Frank Miller’s
 					original graphic novel, right down to the brushstrokes of blood. Visually,
@@ -84,6 +84,7 @@ ASSIGNMENT: HTML template
 				</p>
 
 				<br>
+				<div id = "xerxes"> <img src = "images/xerxes.jpg"></div>
 
 				<p>
 					With such an epic scope –and, let it be said, with Frank Miller’s own tendency for fascistic plotlines
@@ -151,7 +152,7 @@ ASSIGNMENT: HTML template
 				<p>
 					★★★★
 				</p>
-
+				<div id = "cliff"> <img src = "images/cliff.jpg"></div>
 				<br>
 
 				<p>
